--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "clean": "rimraf ./dist ./auth/dist ./auth/*.d.ts ./database/dist ./database/*.d.ts ./firestore/dist ./firestore/*.d.ts ./storage/dist ./storage/*.d.ts ./util/*.d.ts",
     "dev": "npm run clean && rollup -c -w",
     "prepublish": "npm run build",
-    "prepare": "npm run build",
+    "prepare": "npm run build"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
